src/objects/AsyncRequest__c.object
<CustomObject>
    <description>Stores asynchronous requests</description>
    <fields>
        <fullName>AsyncType__c</fullName>
        <description>Type of async operation</description>
        <label>AsyncType</label>
        <picklist>
            <picklistValues>
                <fullName>Translate Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error message</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Error occurred</description>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewAmount__c</fullName>
        <description>New value of amount field in Concurrency1 example</description>
        <label>NewAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OriginalAmount__c</fullName>
        <description>Original amount value for Concurrency1 example</description>
        <label>OriginalAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Params__c</fullName>
        <description>Parameters</description>
        <label>Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TargetOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity lookup used in Concurrency1 example</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>AsyncRequests</relationshipLabel>
        <relationshipName>AsyncRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AsyncRequest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ar-{0000}</displayFormat>
        <label>AsyncRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AsyncRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>